# Recruitment_AI_Agent

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
config/: prompts.yaml  settings.yaml
src/api/: routes.py  schemas.py
src/core/: JobDescriptionGenerator.py  document_processor.py  evaluation_engine.py
src/llm/: __init__.py  base.py  groq_client.py  openai_client.py
src/prompts/: manager.py  prompts.yaml
src/utils/: logger.py
static/: main.js  styles.css
templates/: index.html
